syntax = "proto3";

option csharp_namespace = "GrpcClient";
option java_multiple_files = true;
option java_package = "quickshift.grpc.service";

package org.grpc.service;

import "Protos/Generic.proto";
import "Protos/ShiftSwitchReply.proto";
import "Protos/ShiftSwitchRequestTimeframe.proto";

service ShiftSwitchRequest{
  rpc AddRequest (NewRequestDTO) returns (RequestDTO);
  rpc DeleteRequest (Id) returns (GenericTextMessage);
  rpc UpdateRequest (RequestDTO) returns (RequestDTO);
  rpc GetSingleById (UpdateRequestDTO) returns (RequestDTO);
  rpc GetAll (Empty) returns (RequestDTOList);
  rpc GetRequestsByOriginEmployeeId (Id) returns (RequestDTOList);
  rpc GetRequestsByOriginShiftId (Id) returns (RequestDTOList);
}

message RequestDTO{
  sint64 id = 1;
  sint64 originShiftId = 2;
  sint64 originEmployeeId = 3;
  string details = 4;
  ShiftReplyDTOList replies = 5;
  TimeframeDTOList timeframes = 6;
}

message NewRequestDTO {
  sint64 originShiftId = 1;
  sint64 originEmployeeId = 2;
  string details = 3;
  TimeframeDTOList timeframes = 4;
}

message UpdateRequestDTO {
  sint64 id = 1;
  sint64 originShiftId = 2;
  string details = 3;
}

message RequestDTOList {
  repeated RequestDTO dtos = 1;
}